--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Wellness App</title>
-<link href="bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
-<link href="stylesheet.css" rel="stylesheet" type="text/css">
+<link href="file:///C|/Users/Maiya/Creative Cloud Files/DivHacks/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
+<link href="file:///C|/Users/Maiya/Creative Cloud Files/DivHacks/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body style="padding-top: 70px">
@@ -25,8 +25,10 @@
 	    
   </div>
 </nav>
-<script src="../ITGS IA/Unnamed Site 2/js/jquery-3.4.1.min.js"></script>
-<script src="../ITGS IA/Unnamed Site 2/js/popper.min.js"></script>
-<script src="../ITGS IA/Unnamed Site 2/js/bootstrap-4.4.1.js"></script>
+
+<script src="file:///C|/Users/Maiya/Creative Cloud Files/DivHacks/jquery-3.4.1.min.js"></script>
+<script src="file:///C|/Users/Maiya/Creative Cloud Files/DivHacks/popper.min.js"></script>
+<script src="file:///C|/Users/Maiya/Creative Cloud Files/DivHacks/bootstrap-4.4.1.js"></script>
+	
 </body>
 </html>
