--- a/meditation.html
+++ b/meditation.html
@@ -14,22 +14,27 @@
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+	      <li class="nav-item"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="#">Activities</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Achievements</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Gratitude</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Inspirational Quotes</a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="#">Meditation</a> </li>
+		  <li class="nav-item active"> <a class="nav-link" href="#">Meditation</a> </li>
         </ul>
 	    
   </div>
 </nav>
+
+	<p></p>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/CCSjLtx5ge8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
-<header id="header">
-	<h1>Welcome to Well Hacks</h1>
-	<p>A website that gives you all you need to prioritize your mental health</p>
-	</header>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ZToicYcHIOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/O-6f5wQXSu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/HlIGiMTBWRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 <script src="jquery-3.4.1.min.js"></script>
 <script src="popper.min.js"></script>
