--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+	      <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="#">Activities</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Achievements</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Gratitude</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Inspirational Quotes</a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="#">Meditation</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="gratitude.html">Gratitude</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="quotes.html">Inspirational Quotes</a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="meditation.html">Meditation</a> </li>
         </ul>
 	    
   </div>
@@ -28,7 +28,6 @@
 	
 <header id="header">
 	<h1>Welcome to Well Hacks</h1>
-	<p>A website that gives you all you need to prioritize your mental health</p>
 	</header>
 
 <script src="jquery-3.4.1.min.js"></script>
