--- a/quotes.html
+++ b/quotes.html
@@ -48,6 +48,7 @@
             </script>
         </div>
         <button id="quoteBtn" onClick=generateQuote()> Generate a Quote</button>
+        <img class="gif" src="Ocean.gif" alt="calming gif of waves" /> 
     </div>
 </div>
 <script src="../ITGS IA/Unnamed Site 2/js/jquery-3.4.1.min.js"></script>
