--- a/activitiespg.html
+++ b/activitiespg.html
@@ -14,8 +14,8 @@
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="#">Activities</a> </li>
+	      <li class="nav-item"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+		  <li class="nav-item active"> <a class="nav-link" href="#">Activities</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Achievements</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Gratitude</a> </li>
@@ -25,8 +25,41 @@
 	    
   </div>
 </nav>
-<script src="../ITGS IA/Unnamed Site 2/js/jquery-3.4.1.min.js"></script>
-<script src="../ITGS IA/Unnamed Site 2/js/popper.min.js"></script>
-<script src="../ITGS IA/Unnamed Site 2/js/bootstrap-4.4.1.js"></script>
+
+<main>
+	<link rel="stylesheet" href="activstyle.css"/>
+	<h1>
+		Here are some things to do when you're feeling anxious or overwhelmed.
+		<p>
+			This is a neat list of small activities that you can use to self-sooth.
+			<h2>
+				<input type="checkbox" id="activity1" name="activity1" value="smell">
+				<label for="acticity1"> Light a scented candle or use some perfume 🌹 </label><br>
+				<input type="checkbox" id="activity2" name="activity2" value="stretch">
+				<label for="activity2"> Spend 5-10 minutes stretching. Start with your head and neck and keep goint 🧘 </label><br>
+				<input type="checkbox" id="activity3" name="activity3" value="snack">
+				<label for="activity3"> Spend some time putting together a snack/meal for yourself 🍏 </label><br> 
+				<input type="checkbox" id="activity4" name="activity4" value="drink">
+				<label for="acticity4"> Drink a hot cup of coffee or tea ☕ </label><br>
+				<input type="checkbox" id="activity5" name="activity5" value="video">
+				<label for="acticity5"> Watch a YouTube video from <a href="https://www.youtube.com/c/withcindy/">@withcindy 💻</a></label><br>
+				<input type="checkbox" id="activity6" name="activity6" value="dance">
+				<label for="acticity6"> Put on earbuds, play your favorite song, and dance 💃 </label><br>
+				<input type="checkbox" id="activity7" name="activity7" value="sweet">
+				<label for="acticity7"> Enjoy some gum or hard candy 🍭 </label><br>
+				<input type="checkbox" id="activity8" name="activity8" value="bake">
+				<label for="acticity8"> Bake banana bread or your favotite dessert 🍞 </label><br>
+				<input type="checkbox" id="activity9" name="activity9" value="lotion">
+				<label for="acticity9"> Put lotion on your hands, face, and/or body 🧴 </label><br>
+				<input type="checkbox" id="activity10" name="activity10" value="hug">
+				<label for="acticity10"> Give yourself a hug, or give a hug to someone else 🤗 </label><br>
+
+			</h2>
+		</p>
+	</h1>
+</main>
+<script src="jquery-3.4.1.min.js"></script>
+<script src="popper.min.js"></script>
+<script src="bootstrap-4.4.1.js"></script>
 </body>
 </html>
