code enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="#">Activities</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Achievements</a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="activitespg.html">Activities</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="gratitude.html">Gratitude</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="quotes.html">Inspirational Quotes</a> </li>
@@ -25,11 +24,14 @@
 	    
   </div>
 </nav>
-	
+<div id="container">	
 <header id="header">
 	<h1>Welcome to Well Hacks</h1>
 	</header>
-
+	<p >This website was made with the aim of focusing on mental health and wellness. Our team worked together to create this project that would compile together multiple different resources that could be used similar to a journal.</p>
+	
+	<image id="trees" src="trees.gif" alt="moving through trees in a forest"></image>
+</div>
 <script src="jquery-3.4.1.min.js"></script>
 <script src="popper.min.js"></script>
 <script src="bootstrap-4.4.1.js"></script>
