--- a/gratitude.html
+++ b/gratitude.html
@@ -16,7 +16,6 @@
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="activitespg.html">Activities</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Achievements</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
 			<li class="nav-item active"> <a class="nav-link" href="gratitude.html">Gratitude </a> </li>
 			<li class="nav-item"> <a class="nav-link" href="quotes.html">Inspirational Quotes</a> </li>
@@ -31,13 +30,13 @@
     <!-- Create Form -->
  <form id="form">
  	First thing you're grateful for today:
-	 <TEXTAREA name="topics" cols=60 rows=6 id="gratitude1"></TEXTAREA>        
+	 <textarea name="topics" cols="60" rows="6" id="gratitude1"></textarea>        
 	 
 	 Second thing you're grateful for today:
-	 <TEXTAREA name="topics" cols=60 rows=6 id="gratitude2"> </TEXTAREA> 
+	 <textarea name="topics" cols="60" rows="6" id="gratitude2"> </textarea> 
 	 
 	 Third thing you're grateful for today:
-	 <TEXTAREA name="topics" cols=60 rows=6 id="gratitude3"></TEXTAREA> 
+	 <textarea name="topics" cols="60" rows="6" id="gratitude3"></textarea> 
 	 	
 	  <button type="submit" value="submit">
             Submit
@@ -47,22 +46,5 @@
 <script src="jquery-3.4.1.min.js"></script>
 <script src="popper.min.js"></script>
 <script src="bootstrap-4.4.1.js"></script>
-<script>
-    function handleSubmit(event) {
-    event.preventDefault();
-
-    const data = new FormData(event.target);
-
-    const value = Object.fromEntries(data.entries());
-+
-+   value.topics = data.getAll("topics");
-
-    console.log({ value });
-  }
-
-  const form = document.querySelector("form");
-  form.addEventListener("submit", handleSubmit);
-</script>
-	
 </body>
 </html>
