--- a/quotes.html
+++ b/quotes.html
@@ -16,10 +16,9 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="#">Activities</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Achievements</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Gratitude</a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="activities.html">Activities</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="Emoji.html">Daily Survey</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="gratitude.html">Gratitude</a> </li>
 			<li class="nav-item active"> <a class="nav-link" href="quotes.html">Inspirational Quotes<span class="sr-only">(current)</span></a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="#">Meditation</a> </li>
         </ul>
