one more update!

--- a/activitiespg.html
+++ b/activitiespg.html
@@ -35,7 +35,7 @@
 				<input type="checkbox" id="activity1" name="activity1" value="smell">
 				<label for="acticity1"> Light a scented candle or use some perfume 🌹 </label><br>
 				<input type="checkbox" id="activity2" name="activity2" value="stretch">
-				<label for="activity2"> Spend 5-10 minutes stretching. Start with your head and neck and keep goint 🧘 </label><br>
+				<label for="activity2"> Spend 5-10 minutes stretching. Start with your head and neck and keep going 🧘 </label><br>
 				<input type="checkbox" id="activity3" name="activity3" value="snack">
 				<label for="activity3"> Spend some time putting together a snack/meal for yourself 🍏 </label><br> 
 				<input type="checkbox" id="activity4" name="activity4" value="drink">
