--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
-		  <li class="nav-item"> <a class="nav-link" href="activitespg.html">Activities</a> </li>
+		  <li class="nav-item"> <a class="nav-link" href="activitiespg.html">Activities</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="gratitude.html">Gratitude</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="quotes.html">Inspirational Quotes</a> </li>
