--- a/quotes.html
+++ b/quotes.html
@@ -26,7 +26,7 @@
   </div>
 </nav>
 <div>
-	<div class="title">Daily Inspirational Quotes</div>
+	<h1>Daily Inspirational Quotes</h1>
     <h3 class="description">Welcome to the Inspiration Quotes page, a place where we can offer you a little mood boost🥰 <br>Click on the button below to view a new quote!</h3>
     <div id="displayQuote">
         <script>
