--- a/meditation.html
+++ b/meditation.html
@@ -16,7 +16,7 @@
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
 		  <li class="nav-item"> <a class="nav-link" href="activitiespg.html">Activities</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="#">Daily Survey</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="Emoji.html">Daily Survey</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="gratitude.html">Gratitude</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="quotes.html">Inspirational Quotes</a> </li>
 		  <li class="nav-item active"> <a class="nav-link" href="meditation.html">Meditation <span class="sr-only">(current)</span></a> </li>
