--- a/Emoji.html
+++ b/Emoji.html
@@ -28,7 +28,7 @@
 <div id="survey"> 
     <p align="center"></p>
 
-    <p>Check your mood today</p>
+    <p style="Lucida Sans; font-size:28px; color: #CC7B7D;">Check your mood today</p>
     <div align="center" id="emoji-container">
       <label for="emoji-1">Happy😄</label>
       <input value="" type="checkbox" name="emoji-1" id="emoji-1" />
@@ -41,6 +41,8 @@
       <br>
       <label for="emoji-4">Concerned😖</label>
       <input value="" type="checkbox" name="emoji-2" id="emoji-4" />
+      <br>
+      <img src="SelfCare.jpeg" alt="calming gif of waves" width =500 height =700/> 
     </div>
   </div>
 </h2>
